# TKOM

./: .gitignore  CMakeLists.txt  README.md  TKOM.sln  TKOM.vcxproj  TKOM.vcxproj.filters
src/: Lexer.cpp  Lexer.h  Parser.cpp  Parser.h  ResultsAnalyzer.cpp  ResultsAnalyzer.h  Tags.cpp  Tags.h  TextPosition.cpp  TextPosition.h  main.cpp  utils.cpp  utils.h
src/elements/: HtmlAttribute.cpp  HtmlAttribute.h  HtmlElement.cpp  HtmlElement.h
src/exceptions/: EOFexception.h
src/tokens/: AttributeKeyToken.cpp  AttributeKeyToken.h  AttributeValueToken.cpp  AttributeValueToken.h  ClosingTagToken.cpp  ClosingTagToken.h  CommentToken.cpp  CommentToken.h  DoctypeToken.cpp  DoctypeToken.h  EOFToken.h  EmptyClosingTagToken.cpp  EmptyClosingTagToken.h  EqualsToken.cpp  EqualsToken.h  PlainTextToken.cpp  PlainTextToken.h  QuoteToken.cpp  QuoteToken.h  TagClosingMarkToken.cpp  TagClosingMarkToken.h  TagOpenerToken.cpp  TagOpenerToken.h  TextToken.cpp  TextToken.h  Token.cpp  Token.h
